--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         ECR_REPOSITORY: mywebapp
         IMAGE_TAG: v1.0
       run: |
-        cd web_app/
+        cd webapp /
         ls -ltra
         # Docker build
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
@@ -45,7 +45,7 @@ jobs:
         ECR_REPOSITORY: mysql
         IMAGE_TAG: v1.0
       run: |
-        cd db_mysql/
+        cd dbmysql /
         ls -ltra
         # Docker build
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
