updated deployment manifest

--- a/week5/msql_dep.yaml
+++ b/week5/msql_dep.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: mysql
-        image: 846767006554.dkr.ecr.us-east-1.amazonaws.com/mysql
+        image: 846767006554.dkr.ecr.us-east-1.amazonaws.com/mysql:v1.0
         ports:
         - containerPort: 3306
         env:
@@ -26,4 +26,3 @@ spec:
           value: "pwd"
         - name: MYSQL_ROOT_PASSWORD
           value: "pwd"
-      
