--- a/week5/wbap_dep.yaml
+++ b/week5/wbap_dep.yaml
@@ -1,22 +1,22 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: employees
   labels:
-    app: employees
+    app: webserver
 spec:
+  replicas: 3
   selector:
     matchLabels:
-      app: employees
+      app: webserver
   template:
     metadata:
       labels:
-        app: employees
-    replicas: 3
+        app: webserver
     spec:
       containers:
       - name: webapp
-        image: 846767006554.dkr.ecr.us-east-1.amazonaws.com/mywebapp
+        image: 846767006554.dkr.ecr.us-east-1.amazonaws.com/mywebapp:v6.0
         ports:
         - containerPort: 8080
         env:
@@ -27,7 +27,6 @@ spec:
         - name: DBPORT
           value: "3306"
         - name: DBHOST
-          value: "3.239.23.117"
+          value: "10.244.0.3"
         - name: APP_COLOR
           value: "green"
-      
