--- a/week5/wbap_pd.yaml
+++ b/week5/wbap_pd.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: webapp
-    image: 846767006554.dkr.ecr.us-east-1.amazonaws.com/mywebapp
+    image: 846767006554.dkr.ecr.us-east-1.amazonaws.com/mywebapp:v1.0
     ports:
     - containerPort: 8080
     env:
@@ -18,7 +18,7 @@ spec:
     - name: DBPORT
       value: "3306"
     - name: DBHOST
-      value: "3.239.23.117"
+      value: "10.244.0.3"
     - name: APP_COLOR
       value: "green"
   imagePullSecrets:
